Adding Test cases for AndamaArguments and fixing bugs introduced during last refactoring.